Fix monaco-hover z-index

--- a/src/pages/playground/styles.module.css
+++ b/src/pages/playground/styles.module.css
@@ -26,6 +26,10 @@
 	padding-top: inherit;
 }
 
+:global .monaco-hover {
+	z-index: 999 !important;
+}
+
 :root {
 	--playground-navbar-height: 40px;
 }
